--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon",
-    "build": "babel src --out-dir dist",
+    "build": "npx babel src --out-dir dist",
     "start": "node ./dist/index.js"
   },
   "author": "",
