--- a/server/package.json
+++ b/server/package.json
@@ -31,5 +31,8 @@
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
