--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon",
-    "build": "npx babel src --out-dir dist",
+    "build": "npx babel src --out-dir dist --copy-files",
     "start": "node ./dist/index.js"
   },
   "author": "",
@@ -14,7 +14,6 @@
   "dependencies": {
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
-    "@babel/preset-env": "^7.24.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
