--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
+    "babel-plugin-module-resolver": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,6 +27,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "module-resolver": "^1.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
