--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "main": "./src/index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
     "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon",
-    "build": "npx babel src --out-dir dist --copy-files",
+    "build": "npm install && npx babel src --out-dir dist --copy-files",
     "start": "node ./dist/index.js"
   },
   "author": "",
@@ -20,6 +21,7 @@
     "@types/node": "^20.14.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.3.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -30,9 +32,11 @@
     "module-resolver": "^1.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0"
