--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "stripe": "^16.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0"
